--- a/index.html
+++ b/index.html
@@ -142,22 +142,24 @@ function validatePage2() {
   showPage(3);
 }
 
-function validateFeedback(){
+async function validateFeedback() {
+  const submitBtn = document.getElementById("submitBtn"); // make sure your button has this ID
   const batchId = document.getElementById("batchId").value.trim();
   const quizMarks = document.getElementById("quizMarks").value.trim();
 
-  if(!batchId || quizMarks===""){ 
-    alert("⚠️ Fill Batch ID & Quiz Marks"); 
-    return; 
+  // --- Validation ---
+  if (!batchId || quizMarks === "") {
+    alert("⚠️ Fill Batch ID & Quiz Marks");
+    return;
   }
 
   const unanswered = [];
-  questions.forEach((q,i)=>{
-    if(!document.getElementById("q"+i)?.value) unanswered.push(i+1);
+  questions.forEach((q, i) => {
+    if (!document.getElementById("q" + i)?.value) unanswered.push(i + 1);
   });
-  if(unanswered.length>0){ 
-    alert("⚠️ Answer all questions. Missing Qs: "+unanswered.join(",")); 
-    return; 
+  if (unanswered.length > 0) {
+    alert("⚠️ Answer all questions. Missing Qs: " + unanswered.join(","));
+    return;
   }
 
   const faculty = document.getElementById("facultySelect").value;
@@ -173,22 +175,33 @@ function validateFeedback(){
     quizMarks: Number(quizMarks),
     weightage: parseFloat(document.getElementById("weightageScore").innerText),
     grade: document.getElementById("grade").innerText,
-    answers: questions.map((q,i)=>document.getElementById("q"+i).value)
+    answers: questions.map((q, i) => document.getElementById("q" + i).value)
   };
 
-  fetch("https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec", {
-    method: "POST",
-    body: JSON.stringify(payload)
-  })
-  .then(res => res.json())
-  .then(res => {
-    if(res.status === "success"){
+  try {
+    // --- Disable button & show loading ---
+    if (submitBtn) {
+      submitBtn.disabled = true;
+      submitBtn.innerText = "Submitting... ⏳";
+    }
+
+    const response = await fetch(
+      "https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec",
+      {
+        method: "POST",
+        body: JSON.stringify(payload)
+      }
+    );
+
+    const res = await response.json();
+
+    if (res.status === "success") {
       completedFaculties.push(faculty);
       alert("✅ Feedback submitted for " + faculty);
 
       resetFeedbackForm();
 
-      if(completedFaculties.length < faculties.length){
+      if (completedFaculties.length < faculties.length) {
         loadFaculties();
         showPage(2);
       } else {
@@ -201,26 +214,17 @@ function validateFeedback(){
     } else {
       alert("⚠️ Error saving data. Try again.");
     }
-  })
-  .catch(err => {
+  } catch (err) {
     console.error(err);
     alert("⚠️ Connection error. Data not saved.");
-  });
-}
-
-function loadFaculties(){
-  const select = document.getElementById("facultySelect");
-  select.innerHTML = "";
-  const available = faculties.filter(f=>!completedFaculties.includes(f));
-  if(available.length===0){
-    select.innerHTML=`<option value="">No faculties left</option>`;
-    select.disabled=true;
-  }else{
-    available.forEach(f=>{ select.innerHTML+=`<option value="${f}">${f}</option>`; });
-    select.disabled=false;
+  } finally {
+    // --- Always restore button ---
+    if (submitBtn) {
+      submitBtn.disabled = false;
+      submitBtn.innerText = "Submit Feedback";
+    }
   }
 }
-
 function loadQuestions(){
   const container = document.getElementById("questionsContainer");
   container.innerHTML = "";
@@ -273,6 +277,7 @@ showPage(1);
 </script>
 </body>
 </html>
+
 
 
 
