--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@ function validatePage2() {
   showPage(3);
 }
 
+<script>
 async function validateFeedback() {
-  const submitBtn = document.getElementById("submitBtn"); // make sure your button has this ID
+  const submitBtn = document.getElementById("submitBtn"); 
   const batchId = document.getElementById("batchId").value.trim();
   const quizMarks = document.getElementById("quizMarks").value.trim();
 
@@ -217,16 +218,6 @@ async function validateFeedback() {
   } catch (err) {
     console.error(err);
     alert("⚠️ Connection error. Data not saved.");
-  }
-}
-} finally {
-    // --- Reset button state ---
-    submitBtn.disabled = false;
-    btnText.textContent = "Submit Feedback";
-    spinner.classList.add("hidden");
-  }
-}
-
   } finally {
     // --- Always restore button ---
     if (submitBtn) {
@@ -235,6 +226,7 @@ async function validateFeedback() {
     }
   }
 }
+
 function loadQuestions(){
   const container = document.getElementById("questionsContainer");
   container.innerHTML = "";
@@ -284,9 +276,12 @@ function resetFeedbackForm(){
 
 // Initialize
 showPage(1);
+loadQuestions();
+loadFaculties(); // 👈 VERY IMPORTANT (populate faculty dropdown on page load)
 </script>
 </body>
 </html>
+
 
 
 
